--- a/upperskill-front/src/index.css
+++ b/upperskill-front/src/index.css
@@ -1,11 +1,219 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  [hidden] {
+    display: none;
+  }
+  *,
+  *:before,
+  *:after {
+    box-sizing: border-box;
+  }
+  
+  html {
+    scroll-behavior: smooth;
+    font-size: 100%;
+  }    
+  
+  :root{
+  
+    /* Setting color palette as global variable */
+  
+    /* Primary color */
+  
+    --primary-50: #E8EFF5;
+    --primary-100: #b9ccde;
+    --primary-200: #97b4cf;
+    --primary-300: #6891b9;
+    --primary-400: #4a7cab;
+    --primary-500: #1d5b96;
+    --primary-600: #1a5389;
+    --primary-700: #15416b;
+    --primary-800: #103253;
+    --primary-900: #0c263f;
+    
+    /* Accent color */
+  
+    --accent-50: #E7EBEF;
+    --accent-100: #B6C2CD;
+    --accent-200: #92A4B5;
+    --accent-300: #607A93;
+    --accent-400: #41617E;
+    --accent-500: #12395E;
+    --accent-600: #103456;
+    --accent-700: #0D2843;
+    --accent-800: #0A1F34;
+    --accent-900: #081827;
+  
+    /* Secondary color */
+  
+    --secondary-50: #F2F7FC;
+    --secondary-100: #D6E7F5;
+    --secondary-200: #C3DBF0;
+    --secondary-300: #A7CBE9;
+    --secondary-400: #96C1E5;
+    --secondary-500: #7CB1DE;
+    --secondary-600: #71A1CA;
+    --secondary-700: #587E9E;
+    --secondary-800: #44617A;
+    --secondary-900: #344A5D;
+  
+    /* Black color */
+  
+    --black-50: #F2F7FC;
+    --black-100: #D6E7F5;
+    --black-200: #C3DBF0;
+    --black-300: #A7CBE9;
+    --black-400: #96C1E5;
+    --black-500: #7CB1DE;
+    --black-600: #71A1CA;
+    --black-700: #587E9E;
+    --black-800: #44617A;
+    --black-900: #344A5D;
+  
+  /* Success color */
+  
+  --success-50: #EDF5E6 ;
+  --success-100: #C6E0B2;
+  --success-200: #AAD18C;
+  --success-300: #83BC58;
+  --success-400: #6BAF37;
+  --success-500: #6BAF37;
+  --success-600: #408D05;
+  --success-700: #326E04;
+  --success-800: #275503;
+  --success-900: #275503;
+  
+   /* Warning color */
+  
+  --warning-50:  #FAE8EB;
+  --warning-100: #F0B8C0;
+  --warning-200: #E996A2;
+  --warning-300: #DF6678;
+  --warning-400: #D9485D;
+  --warning-500: #CF1A35;
+  --warning-600: #BC1830;
+  --warning-700: #931226;
+  --warning-800: #720E1D;
+  --warning-900: #570B16;
+  
+  /* Black color */
+  --black-50: #E6E6E8;
+  --black-100: #B1B1B7;
+  --black-200: #8C8B94;
+  --black-300: #575663;
+  --black-400: #363545;
+  --black-500: #040316;
+  --black-600: #040314;
+  --black-700: #030210;
+  --black-800: #02020C;
+  --black-900: #020109;
+  
+  /*background color */
+    --background-color: #FBFBFE;
+    /* Setting fonts global variable */
+  
+    --font-family-base: 'Montserrat', 'Arial', 'Helvetica', sans-serif;
+    --font-family-title: 'Josefin Sans', 'Century Gothic', 'Trebuchet MS', sans-serif;
+    
+  
+    /* Setting font global variable */
+  
+      /* body base text */
+      --body-base-font-family: var(--font-family-base);
+      --body-base-font-size: 16px;
+      --body-base-font-style: normal;
+      --body-base-font-weight: 400;
+      --body-base-letter-spacing: 00.4px;
+      --body-base-line-height: 150%;
+  
+      /* body bold text */
+  
+      --body-bold-font-family: var(--font-family-base);
+      --body-bold-font-size: 16px;
+      --body-bold-font-style: normal;
+      --body-bold-font-weight: 600;
+      --body-bold-letter-spacing: 0.4px;
+      --body-bold-line-height: 150%;
+  
+      /* body caption text */
+  
+      --body-caption-font-family: var(--font-family-base);
+      --body-caption-font-size: 14px;
+      --body-caption-font-style: normal;
+      --body-caption-font-weight: 400;
+      --body-caption-letter-spacing: 0.4px;
+      --body-caption-line-height: 200%;
+  
+      /* body link text */
+  
+      --body-link-font-family: var(--font-family-base);
+      --body-link-font-size: 16px;
+      --body-link-font-style: normal;
+      --body-link-font-weight: 400;
+      --body-link-letter-spacing: 0.4px;
+      --body-link-line-height: 150%;
+  
+      /* body small text */
+  
+      --body-small-font-family: var(--font-family-base);
+      --body-small-font-size: 14px;
+      --body-small-font-style: normal;
+      --body-small-font-weight: 400;
+      --body-small-letter-spacing: 0.4px;
+      --body-small-line-height: 120%;
+  
+      /* headings headings text */
+  
+      --headings-heading-font-family: var(--font-family-title);
+      --headings-heading-font-size: 24px;
+      --headings-heading-font-style: normal;
+      --headings-heading-font-weight: 600;
+      --headings-heading-letter-spacing: 0px;
+      --headings-heading-line-height: 120%;
+  
+      /* headings subheading text */
+  
+      --headings-subheading-font-family: var(--font-family-title);
+      --headings-subheading-font-size: 20px;
+      --headings-subheading-font-style: normal;
+      --headings-subheading-font-weight: 500;
+      --headings-subheading-letter-spacing: 0px;
+      --headings-subheading-line-height: 120%;
+  
+      /* title display text */
+  
+      --title-display-font-family: var(--font-family-title);
+      --title-display-font-size: 72px;
+      --title-display-font-style: normal;
+      --title-display-font-weight: 700;
+      --title-display-letter-spacing: 0px;
+      --title-display-line-height: normal;
+  
+       /* Title display text */
+  
+      --title-subtitle-font-family: var(--font-family-title);
+      --title-subtitle-font-size: 32px;
+      --title-subtitle-font-style: normal;
+      --title-subtitle-font-weight: 500;
+      --title-subtitle-letter-spacing: 0px;
+      --title-subtitle-line-height: 100%;
+  
+        /* Title title text */
+  
+      --titles-title-font-family: var(--font-family-title);
+      --titles-title-font-size: 48px;
+      --titles-title-font-style: normal;
+      --titles-title-font-weight: 600;
+      --titles-title-letter-spacing: 0px;
+      --titles-title-line-height: 100%;
+  
+    /* drop shadow property*/
+  
+      --drop-shadow-base: 0px 2px 6px 2px rgba(124, 177, 222, 1), 0px 1px 2px 0px rgba(124, 177, 222, 1);
+  
+      --drop-shadow-btn-hover: -4px 6px 20px 8px rgba(29, 91, 150, 0.5);
+  
+  
+  
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,56 +221,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+
+
+
+
+
