--- a/upperskill-front/src/App.css
+++ b/upperskill-front/src/App.css
@@ -1,42 +1,153 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+*::before *::after{
+  box-sizing: border-box;
+}
+#root{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: var(--background-color);
+  
+}
+
+h1 {
+  color: var(--primary-500);
+    font-family: var( --titles-title-font-family);
+    font-size:var(--titles-title-font-size); 
+    font-style: var(--titles-title-font-style);
+    font-weight: var(--titles-title-font-weight);
+    letter-spacing: var(--titles-title-letter-spacing);
+    line-height: var(--titles-title-line-height);
+    margin: 0px;
+   
+}
+
+.btn-grp{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+
+.display-text {
+  display: flex;
+  height: fit-content;
+  min-height: 0px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 24px;
+  align-self: stretch;
+  
+  
+}
+
+.landing {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 132px 0px ;
+  height: 844px;
+  min-height: fit-content;
+  gap: 24px;
+  background-image: url("./assets/background-illustration.svg");
+  background-repeat: no-repeat;
+  background-position: center calc(50% - 48px); /* Adjust vertical position */
+ 
+}
+
+
+
+/* Title/Display */
+.main-display{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 144px;
+  font-family: var(--titles-display-font-family);
+  font-size: var(--titles-display-font-size);
+  font-style: var(--titles-display-font-style);
+  font-weight: var(--titles-display-font-weight);
+  line-height: var(--titles-display-line-height);
+
+}
+/*Display style*/
+.display-1{
+  color: var(--primary-500);
+}
+.display-2{
+  color: var(--accent-500);
+}
+/*Display description*/
+.main-dscp{
+  display: flex;
+  position: relative;
+  font-family: var(--headings-heading-font-family);
+  font-size: var(--headings-heading-font-size);
+  font-style: var(--headings-heading-font-style);
+  font-weight: var(--headings-heading-font-weight);
+  line-height: var(--headings-heading-line-height);
+  color: var(--black-500);
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+.cta-landing{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 16px 0px;
+  min-height: 0px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.banner {
+  background-color: var(--accent-500);
+  display: flex;
+  width: auto;
+  padding: 16px 156px;
+  justify-content: center;
+  align-items: center;
+  gap: 201px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.mvp-section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 96px 156px;
+  gap: 48px;
+  background-image: url('./assets/background-shapes.svg');
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
-.card {
-  padding: 2em;
+.feature-section-heading{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap:24px;
+  width: fit-content;
 }
 
-.read-the-docs {
-  color: #888;
+.feature-section-heading h4 {
+  font-family: var(--headings-heading-font-family);
+  font-size: var(--headings-heading-font-size);
+  font-style: var(--headings-heading-font-style);
+  font-weight: var(--headings-heading-font-weight);
+  line-height: var(--headings-heading-line-height);
+  color: var(--accent-500);
+  text-align: center;
+}
+
+.mvp-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 135px;
 }
