--- a/upperskill-front/src/index.css
+++ b/upperskill-front/src/index.css
@@ -213,6 +213,8 @@
       --drop-shadow-base: 0px 2px 6px 2px rgba(124, 177, 222, 1), 0px 1px 2px 0px rgba(124, 177, 222, 1);
   
       --drop-shadow-btn-hover: -4px 6px 20px 8px rgba(29, 91, 150, 0.5);
+
+      --m1-elevation: 0px 4px 8px 3px rgba(0, 0, 0, 0.15), 0px 1px 3px 0px rgba(0, 0, 0, 0.30);
   
   
   
@@ -226,7 +228,7 @@
 .body{
   display: flex;
   justify-content: center;
-  width: 1440px;
+  width: 100%;
   min-width: fit-content;
   background-color: var(--background-color);
 }
