--- a/upperskill-front/src/navigation/navbar.css
+++ b/upperskill-front/src/navigation/navbar.css
@@ -13,6 +13,7 @@ body, html {
     min-width: min-content;
     height: 100px;
     min-height: fit-content;
+    max-height: 250px;
     padding: 16px 156px;
     justify-content: space-between;
     align-items: center;
@@ -59,7 +60,12 @@ body, html {
 
 
 
-
+.nav-bar {
+    position: -webkit-sticky; /* For Safari */
+    position: sticky;
+    top: 0;
+    z-index: 100; 
+}   
 
 
 
