--- a/upperskill-front/src/index.css
+++ b/upperskill-front/src/index.css
@@ -1,14 +1,23 @@
+[hidden] {
+  display: none;
+}
 
-  [hidden] {
-    display: none;
-  }
-  *,
-  *:before,
-  *:after {
-    box-sizing: border-box;
-    margin: 0px;
-    
-  }
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  margin: 0px;
+  
+}
+
+
+  /* General Reset */
+body, html {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
   
   html {
     scroll-behavior: smooth;
