--- a/upperskill-front/src/navbar/navbar.css
+++ b/upperskill-front/src/navbar/navbar.css
@@ -1,9 +1,3 @@
-/* General Reset */
-body, html {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 /* Navbar Container */
 .nav-bar {
@@ -34,6 +28,13 @@ body, html {
 .browse-grp img {
     height: 64px;
     margin-right: 15px;
+    transition: all 0.8s;
+}
+
+.browse-grp img:hover {
+    scale: 1.1;
+    cursor: pointer;
+    transition: all 0.8s;
 }
 
 
@@ -66,6 +67,44 @@ body, html {
     top: 0;
     z-index: 100; 
 }   
+
+.logged-navbar{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    padding-left: 120px;
+    background-color: var(--background-color);
+    gap: 16px;
+}
+
+.logged-navbar h6{
+    color: var(--primary-500);
+    font-family: var( --body-bold-font-family);
+    font-size:var(--body-bold-font-size); 
+    font-style: var(--body-bold-font-style);
+    font-weight: var(--body-bold-font-weight);
+    letter-spacing: var(--body-bold-letter-spacing);
+    line-height: var(--body-bold-line-height);
+    margin: 0px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
