--- a/upperskill-front/src/WebApp/sideMenu.css
+++ b/upperskill-front/src/WebApp/sideMenu.css
@@ -8,6 +8,11 @@
         padding: 24px 16px;
         margin: 0px;
         background-color: var(--accent-500);
+        border-radius: 0px 14px 0px 0px;
+        
+        top: 0;
+        z-index: 100; 
+            
 }
 
 
@@ -20,6 +25,7 @@
         padding: 0px;
         margin: 0px;
         gap: 24px;
+        
 }
 
 .list-menu {
@@ -29,6 +35,9 @@
         align-items: center;
         width: 100%;
         height: fit-content;
+        gap: 16px ;
+        top: 0;
+        z-index: 100; 
 }
 
 .list-menu button{
@@ -64,12 +73,12 @@
 
 .btn-menu{
         display: flex;
-        justify-content: center;
-        align-items: flex-start;
+        justify-content: flex-start;
+        align-items: center;
         width: 100%;
         height: 48px;
         padding: 14px 16px;
-        margin:0px;
+        gap: 8px;
         background-color: var(--accent-500);
         border: none;
         border-radius: 8px;
@@ -83,4 +92,53 @@
         text-align: left;
         text-decoration: none;
         cursor: pointer;
+}
+
+.btn-menu:hover{
+        background-color: var(--primary-500);
+        transition: all 0.6s ease;
+}
+
+.btn-menu.active {
+        background-color: var(--primary-500);
+        color: var(--background-color);
+      }
+
+
+.logout-menu {
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: fit-content;
+        gap: 16px ;
+        top: 0;
+}
+
+.btn-logout{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        width: 100%;
+        height: 48px;
+        padding: 14px 16px;
+        gap: 16px;
+        background-color: var(--secondary-500);
+        border: none;
+        border-radius: 8px;
+        color: var(--accent-500);
+        font-family: var(--body-bold-font-family);
+        font-size: var(--body-bold-font-size);
+        font-style: var(--body-bold-font-style);
+        font-weight: var(--body-bold-font-weight);
+        letter-spacing: var(--body-bold-letter-spacing);
+        line-height: var(--body-bold-line-height);
+        text-decoration: none;
+        cursor: pointer;
+}
+
+.btn-logout:hover{
+        background-color: var(--secondary-200);
+        transition: all 0.6s ease;
 }
