--- a/upperskill-front/src/footer/footer.css
+++ b/upperskill-front/src/footer/footer.css
@@ -4,7 +4,7 @@
         justify-content: flex-start;
         align-items: center;
         padding-top: 32px;
- 
+        
         background-color: var(--accent-500);
         
         
@@ -45,7 +45,7 @@
         align-items: flex-start;
         justify-content: center;
         width: 100%;
-        height: 76px;
+        height: fit-content;
         padding: 10px 156px;
      
         
