--- a/upperskill-front/src/cta-btn/button.css
+++ b/upperskill-front/src/cta-btn/button.css
@@ -5,6 +5,7 @@
     align-items: center;
     gap: 14px;
     flex-wrap: nowrap;
+    border: none;
 }
 
 .primary {
@@ -26,7 +27,7 @@
     border-color: var(--primary-500);
     box-shadow:var(--drop-shadow-base);
     transition: all 0.6s;
-    
+    border: none;
 }
 .text{
     min-width: none;
