--- a/upperskill-front/src/WebApp/dashboard/Dashboard.css
+++ b/upperskill-front/src/WebApp/dashboard/Dashboard.css
@@ -3,7 +3,6 @@
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
-        padding: 0px 120px 32px 32px;
         width: 100%;
         height:100%;
        
@@ -45,7 +44,7 @@
         justify-content: flex-start;
         align-items: flex-start;
         width: 100%;
-        height: 100vh;
+        height: 100%;
         gap: 16px;
         padding: 16px;
 }
@@ -63,7 +62,6 @@
         gap: 16px;
         width: 100%;
         height: 100%;
-        max-height: calc(86vh - 100px);
         overflow-y: scroll;
         scroll-behavior: smooth;
        
