Filled Landing Page with content, Fixed button hover not woeking

--- a/upperskill-front/src/cta-btn/button.css
+++ b/upperskill-front/src/cta-btn/button.css
@@ -102,8 +102,9 @@
     color: var(--background-color);
 }
 
-.link:hover{
+.cta-btn .link:hover{
     transition: transform 1.2s ease;
     text-decoration: underline;
+    color: var(--accent-500);
     cursor: pointer;
 }
