Fixed navigation links for the navigation bar and footer
Navigatin link in footer and nav bar had the issue of causing the whole page to refresh instead of just update the rendred component

--- a/upperskill-front/src/cta-btn/button.css
+++ b/upperskill-front/src/cta-btn/button.css
@@ -103,8 +103,8 @@
 }
 
 .cta-btn .link:hover{
-    transition: transform 1.2s ease;
-    text-decoration: underline;
+    transition: all 1.2s ease;
+    text-decoration: 2px    underline;
     color: var(--accent-500);
     cursor: pointer;
 }
