--- a/upperskill-front/src/footer/footer.css
+++ b/upperskill-front/src/footer/footer.css
@@ -3,22 +3,18 @@
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
-        padding-top: 32px;
-        
+        padding: 32px 0px;
         background-color: var(--accent-500);
-        
-        
+        gap: 24px;
 }
 
-.container {
+.footer-container {
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
+        justify-content: flex-start;
         align-items: center;
-        width: 1128px;
-        
-        padding-right: 156px;
-        gap: 72px;
+        width: 100%;
+        padding: 0px 156px;
 }
 
 .footer-logo {
@@ -29,14 +25,34 @@
         transition: all 0.8s;
 }
 
-.footer-link {
+.footer-links {
         display: flex;
         flex-direction: row;
         justify-content: center;
-        height: 52px;
         align-items: center;
-        gap: 32px;
+        width: 100%;
+        height: 52px;
+        gap: 48px;
         
+}
+
+.footer-link{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        font-family: var(--body-bold-font-family);
+        font-size: var(--body-bold-font-size);
+        font-style: var(--body-bold-font-style);
+        font-weight: var(--body-bold-font-weight);
+        line-height: var(--body-bold-line-height);
+        color: var(--background-color);
+        text-decoration: none;
+}
+
+.footer-link:hover{
+        transition: all 1.2s ease;
+        text-decoration: 2px underline;
 }
 
 .copyright {
@@ -45,8 +61,9 @@
         align-items: flex-start;
         justify-content: center;
         width: 100%;
-        height: fit-content;
-        padding: 10px 156px;
+        height: 100%;
+        padding: 16px 156px;
+        border-top: 2px  solid var(--background-color);
      
         
 }
@@ -60,13 +77,7 @@
         color: var(--background-color);
 }
 
-.divider {
-        content: '';
-        height: 1px;
-        width: 100%;
-        background-color: var(--background-color);
-        margin-top: 16px;
-}
+
 
 .footer-logo:hover{
         cursor: pointer;
