--- a/upperskill-front/src/navbar/navbar.css
+++ b/upperskill-front/src/navbar/navbar.css
@@ -2,51 +2,77 @@
 /* Navbar Container */
 .nav-bar {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    flex-wrap: wrap;
-    min-width: min-content;
+    flex-wrap: nowrap;
     height: fit-content;
     max-height: 250px;
     padding: 8px 156px;
-    justify-content: space-between;
-    align-items: center;
     background-color: var(--background-color);
     
 }
 
 /* Logo and Navigation Menu */
-.browse-grp {
+.home-grp {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    width: auto;
+    width: 100%;
     gap: 24px;
     flex-wrap: wrap;
     min-height: fit-content;
 }
 
-.browse-grp img {
+.home-grp img {
     height: 64px;
     margin-right: 15px;
     transition: all 0.8s;
 }
 
-.browse-grp img:hover {
+.home-grp img:hover {
+    transition: all 0.8s;
     scale: 1.1;
     cursor: pointer;
-    transition: all 0.8s;
 }
 
+.nav-links{
+    display: flex;
+    flex-direction: row;
+    width: auto;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
+.nav-link{
+    transition: all 0.8s;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-family: var(--body-bold-font-family);
+    font-size: var(--body-bold-font-size);
+    font-style: var(--body-bold-font-style);
+    font-weight: var(--body-bold-font-weight);
+    line-height: var(--body-bold-line-height);
+    color: var(--accent-500);
+    text-decoration: none;
+}
 
+.nav-link:hover{
+    transition: all 0.8s;
+    text-decoration: 2px underline;
+}
 
 /* Call-to-Action Buttons */
 .cta-grp {
     display: flex;
-    justify-content: flex-start;
-    flex-wrap: nowrap;
+    justify-content: flex-end;
     align-items: center;
     gap: 24px;
-    width: auto;
-    flex-wrap: wrap;
+    width: 100%;
     min-height: fit-content;
 }
 
@@ -119,7 +145,7 @@
         display: none;
     }
 
-    .browse-grp img {
+    .home-grp img {
         height: 30px;
     }
 
