--- a/upperskill-front/src/Login/LoginForm.css
+++ b/upperskill-front/src/Login/LoginForm.css
@@ -1,6 +1,7 @@
 .login-form-wrapper{
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
   height: 100vh;
   width: 100%;
@@ -195,7 +196,7 @@ input::placeholder {
   margin: 0px;
 }
 
-.login-form-switch span{
+.form-switch{
   color: var(--primary-500);
   font-family: var( --body-base-font-family);
   font-size:var(--body-base-font-size); 
@@ -204,10 +205,11 @@ input::placeholder {
   letter-spacing: var(--body-base-letter-spacing);
   line-height: var(--body-base-line-height);
   margin: 0px;
+  text-decoration: none;
 }
 
-.login-form-switch span:hover {
-  text-decoration: underline;
+.form-switch:hover {
+  text-decoration: underline var(--primary-500);
   cursor: pointer;
   transition: all 0.6s ease;
 }
