--- a/upperskill-front/src/cta-btn/button.css
+++ b/upperskill-front/src/cta-btn/button.css
@@ -104,7 +104,7 @@
 
 .cta-btn .link:hover{
     transition: all 1.2s ease;
-    text-decoration: 2px    underline;
+    text-decoration: 2px underline var(--accent-500);
     color: var(--accent-500);
     cursor: pointer;
 }
