--- a/upperskill-front/src/Login/LoginForm.css
+++ b/upperskill-front/src/Login/LoginForm.css
@@ -5,7 +5,7 @@
   align-items: center;
   height: 100vh;
   width: 100%;
-  padding: 96px 156px;
+  padding: 96px 156px 0px 156px;
   background-color: var(--primary-50);
 }
 
@@ -48,25 +48,27 @@
     gap: 24px;
     width: 100%;
   }
-      /* Form group styles */
-      .input-field {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        width: 100%;
-        gap: 8px;
-      }
+
+  /* Form group styles */
+  .input-field {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  gap: 8px;
+}
+
       /* input label styles */
-    .input-field label {
-    color: var(--primary-500);
-    font-family: var( --body-bold-font-family);
-    font-size:var(--body-bold-font-size); 
-    font-style: var(--body-bold-font-style);
-    font-weight: var(--body-bold-font-weight);
-    letter-spacing: var(--body-bold-letter-spacing);
-    line-height: var(--body-bold-line-height);
-    margin: 0px;
+.input-field label {
+  color: var(--primary-500);
+  font-family: var( --body-bold-font-family);
+  font-size:var(--body-bold-font-size); 
+  font-style: var(--body-bold-font-style);
+  font-weight: var(--body-bold-font-weight);
+  letter-spacing: var(--body-bold-letter-spacing);
+  line-height: var(--body-bold-line-height);
+  margin: 0px;
 }
  /* inpute field placeholder style  */
 input::placeholder {
@@ -80,91 +82,91 @@ input::placeholder {
   margin: 0px;
 }
       /*inpute styling */
-      .input-field input {
-        display: flex;
-        height: 40px;
-        align-items: center;
-        align-self: stretch;
-        width: 100%;
-        padding: 11px 16px;
-        border: 1px solid var(--primary-200);
-        border-radius: 8px;
-        transition: all 0.6s ease;
-        color: var(--black-400);
-        font-family: var( --body-bold-font-family);
-        font-size:var(--body-bold-font-size); 
-        font-style: var(--body-bold-font-style);
-        font-weight: var(--body-bold-font-weight);
-        letter-spacing: var(--body-bold-letter-spacing);
-        line-height: var(--body-bold-line-height);
-        margin: 0px;
-      }
+.input-field input {
+  display: flex;
+  height: 40px;
+  align-items: center;
+  align-self: stretch;
+  width: 100%;
+  padding: 11px 16px;
+  border: 1px solid var(--primary-200);
+  border-radius: 8px;
+  transition: all 0.6s ease;
+  color: var(--black-400);
+  font-family: var( --body-bold-font-family);
+  font-size:var(--body-bold-font-size); 
+  font-style: var(--body-bold-font-style);
+  font-weight: var(--body-bold-font-weight);
+  letter-spacing: var(--body-bold-letter-spacing);
+  line-height: var(--body-bold-line-height);
+   margin: 0px;
+}
       
-      .input-field input:focus {
-        border-color:var(--primary-200);
-        outline: 0.5px solid;
-        transition: all 0.6s ease;
-      }
+.input-field input:focus {
+  border-color:var(--primary-200);
+  outline: 0.5px solid;
+  transition: all 0.6s ease;
+}
       
-      /* Error and success messages */
-      .error-message {
-        color: var(--warning-500);
-        font-family: var( --body-small-font-family);
-        font-size:var(--body-small-font-size); 
-        font-style: var(--body-small-font-style);
-        font-weight: var(--body-small-font-weight);
-        letter-spacing: var(--body-small-letter-spacing);
-        line-height: var(--body-small-line-height);
-        margin: 0px;
-        transition: all 0.6s ease;
-      }
+/* Error and success messages */
+.error-message {
+  color: var(--warning-500);
+  font-family: var( --body-small-font-family);
+  font-size:var(--body-small-font-size); 
+  font-style: var(--body-small-font-style);
+  font-weight: var(--body-small-font-weight);
+  letter-spacing: var(--body-small-letter-spacing);
+  line-height: var(--body-small-line-height);
+  margin: 0px;
+  transition: all 0.6s ease;
+}
       
-      .success-message {
-        color: var(--success-500);
-        font-family: var( --body-small-font-family);
-        font-size:var(--body-small-font-size); 
-        font-style: var(--body-small-font-style);
-        font-weight: var(--body-small-font-weight);
-        letter-spacing: var(--body-small-letter-spacing);
-        line-height: var(--body-small-line-height);
-        margin: 0px;
-        transition: all 0.6s ease;
-      }
+.success-message {
+  color: var(--success-500);
+  font-family: var( --body-small-font-family);
+  font-size:var(--body-small-font-size); 
+  font-style: var(--body-small-font-style);
+  font-weight: var(--body-small-font-weight);
+  letter-spacing: var(--body-small-letter-spacing);
+  line-height: var(--body-small-line-height);
+  margin: 0px;
+  transition: all 0.6s ease;
+}
       
-      /* Button styles */
-      .submit-button {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        padding: 14px;
-        color: var(--background-color);
-        background-color: var(--primary-500);
-        border: 1px var(--primary-500);
-        border-radius: 4px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-        border-radius: 10px;
-        box-shadow: 0px 1px 2px 0px #7CB1DE, 0px 2px 6px 2px #7CB1DE;
-        font-family: var( --body-bold-font-family);
-        font-size:var(--body-bold-font-size); 
-        font-style: var(--body-bold-font-style);
-        font-weight: var(--body-bold-font-weight);
-        letter-spacing: var(--body-bold-letter-spacing);
-        line-height: var(--body-bold-line-height);
-        margin: 0px;
-        gap: 8px;
-      }
+/* Button styles */
+    .submit-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 14px;
+    color: var(--background-color);
+    background-color: var(--primary-500);
+    border: 1px var(--primary-500);
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    border-radius: 10px;
+    box-shadow: 0px 1px 2px 0px #7CB1DE, 0px 2px 6px 2px #7CB1DE;
+    font-family: var( --body-bold-font-family);
+    font-size:var(--body-bold-font-size); 
+    font-style: var(--body-bold-font-style);
+    font-weight: var(--body-bold-font-weight);
+    letter-spacing: var(--body-bold-letter-spacing);
+    line-height: var(--body-bold-line-height);
+    margin: 0px;
+    gap: 8px;
+}
       
-      .submit-button:hover {
-        box-shadow: 0px 8px 20px 9px #96C1E5;
-        transition: all 0.6s ease;
-      }
+.submit-button:hover {
+  box-shadow: 0px 8px 20px 9px #96C1E5;
+  transition: all 0.6s ease;
+}
       
-      .submit-button:focus {
-        outline: none;
-      }
+.submit-button:focus {
+  outline: none;
+  }
 
 
 .divider-login {
