Add FAQ page with dynamic content and improve UI styling
- **FAQs Page**:
  - Added routing for FAQs in App.jsx and navbar.jsx.
  - Created FAQ page (FAQs.jsx) and individual FAQ element (FaqElement.jsx).
  - Added FAQ-related styling (FAQs.css and FaqElement.css).
  - Added contentFaq.json to store FAQ data dynamically instead of hardcoding HTML.

- **Authentication Enhancements**:
  - Updated Signup.jsx with a new 'isStudent' checkbox for improved user input handling.
  - Fixed LoginForm.css for better styling.

- **Footer Improvements**:
  - Fixed font styling in footer.css.
  - Added FAQ routing in footer.jsx for easy navigation.

- **New Icon**:
  - Added ArrowUp.jsx for additional icon functionality.

This commit introduces a dynamic FAQ section and addresses several UI improvements to enhance user experience.

--- a/upperskill-front/src/Login/LoginForm.css
+++ b/upperskill-front/src/Login/LoginForm.css
@@ -216,4 +216,43 @@ input::placeholder {
   transition: all 0.6s ease;
 }
 
-      
+.checkbox-field{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+}
+  .checkbox-label {
+    display: flex;  
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: var(--black-300);
+    font-family: var( --body-bold-font-family);
+    font-size:var(--body-bold-font-size); 
+    font-style: var(--body-bold-font-style);
+    font-weight: var(--body-bold-font-weight);
+    letter-spacing: var(--body-bold-letter-spacing);
+    line-height: var(--body-bold-line-height);
+    gap: 8px;
+  }   
+
+  .checkbox-input {
+    appearance: none;
+    width: 18px;
+    height: 18px;
+    border: 2px solid var(--primary-500);
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.5s;
+  }
+  
+  .checkbox-input:checked {
+    background-color: var(--primary-500);
+    border-color: var(--primary-500);
+  }
+  
+  .checkbox-input:hover {
+    border-color: var(--accent-500);
+  }
