--- a/upperskill-front/src/WebApp/courses/CoursesCard.css
+++ b/upperskill-front/src/WebApp/courses/CoursesCard.css
@@ -8,6 +8,7 @@
         gap: 16px;
         border-radius: 12px;
         box-shadow: var(--m1-elevation);
+        overflow: hidden;
 }
 
 .card-content{
