--- a/upperskill-front/src/WebApp/dashboard/Dashboard.css
+++ b/upperskill-front/src/WebApp/dashboard/Dashboard.css
@@ -5,7 +5,7 @@
         align-items: flex-start;
         width: 100%;
         height:100%;
-       
+       padding: 24px;
 
 }
 .dashboard-body h4{
