Integrate backend functionality and improve UI/UX styling
- **Dependencies**:
  - Installed React Toast and updated package.json.

- **404 and About Pages**:
  - Fixed height issue in 404.css.
  - Added link styling in about.css.
  - Added a link to the signup page in about.jsx for improved navigation.

- **State Management**:
  - Introduced a React Context Provider in App.jsx to manage global state.
  - Added a new state manager file (UserProvider.jsx).
  - Updated main.jsx to wrap the app with the state manager.

- **FAQs**:
  - Fixed shadow rendering issue in FaqElement.css for better visuals.

- **Authentication**:
  - Linked Login.jsx and Signup.jsx with the backend API, tested successfully.
  - Added React Toast notifications for user feedback in LoginForm.css.

- **Side Menu and Navbar**:
  - Added a logout function in sideMenu.jsx, integrated with backend API.

- **Backend Configuration**:
  - Configured local backend server port to 5000 in vite.config.js.

--- a/upperskill-front/src/404/404.css
+++ b/upperskill-front/src/404/404.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 90vh;
   width: 100%;
   padding: 96px 156px;
   background-color: var(--black-50);
@@ -24,6 +24,7 @@
         font-style: var(--headings-heading-font-style);
         font-weight: var(--headings-heading-font-weight);
         letter-spacing: var(--headings-heading-letter-spacing);
+        line-height: var(--titles-title-line-height);
         color: var(--accent-500);
 }
 
