Adding Teacher Flow

--- a/upperskill-front/src/WebApp/courses/CourseList.css
+++ b/upperskill-front/src/WebApp/courses/CourseList.css
@@ -1,10 +1,9 @@
-.course-list{
+.enrolled-course-list{
         display: flex ;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
         width: 100%;
         height: 100%;
-        padding: 32px;
 
 }
