--- a/upperskill-front/src/Login/LoginForm.css
+++ b/upperskill-front/src/Login/LoginForm.css
@@ -17,13 +17,12 @@
   justify-content: center;
   align-items: flex-start;
   gap: 24px;
-  width:360px;
+  width:auto;
   height: fit-content;
   border: 1px solid var(--black-50);
   border-radius: 10px;
   background-color: var(--background-color);
   padding: 24px;
-  gap: 24px;
   box-shadow: var(--m1-elevation);
   transition: all 0.8s ease;
 }
@@ -39,6 +38,7 @@
   line-height: var(--headings-heading-line-height);
   margin: 0px;
   text-align: left;
+  width: 360px;
   }
 
   .login-form{
