--- a/upperskill-front/src/WebApp/dashboard/Dashboard.css
+++ b/upperskill-front/src/WebApp/dashboard/Dashboard.css
@@ -1,8 +1,8 @@
 .dashboard-body{
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
+        justify-content: center;
+        align-items: center;
         width: 100%;
         height:100%;
        padding: 24px;
